# openpgn

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  pack.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ctest.yml  doxygen.yml
include/: pgn.h
include/pgn/: pgn.h  util.h
lib/: move.c  pgn.c  tag.c  util.c
test/: CMakeLists.txt  conf.h.in  main.c  sample.h.in
test/samples/: anglo-slav.pgn  caro-kann.pgn  sample-fail-1.pgn  sample-fail-2-0.pgn  sample-fail-2-1.pgn  sample-fail-4.pgn  sample-inv-seq-delimiter.pgn  sample-no-begin-bracket.pgn  sample-no-begin-quote.pgn  sample-no-delimiter.pgn  sample-no-end-bracket.pgn  sample-no-end-quote.pgn  sample-no-file.pgn  sample-no-key.pgn  sample-no-rank.pgn  sample-unknown-piece.pgn  sample.pgn
